hamburger menu / image sprite

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.ico">
+  <link rel="stylesheet" href="index.css">
   <title>NAVER_MJ</title>
 </head>
 <body>
-  
+  <div id="wrap">
+    <div id="wrap-center">
+      <div id="header">
+        <div id="header-hamburger">
+          <div></div>
+        </div>
+      </div>
+      <div id="search"></div>
+      <div id="nav"></div>
+      <div id="main"></div>
+    </div>
+  </div>
 </body>
 </html>
