--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <div id="wrap-center">
       <div id="header">
         <button id="header-hamburger">
+          <!--:hover::before-->
           <div></div>
+          <span class="blind">확장 영역</span>
+        </button>
+        <button id="header-pay">
+          <!--:hover::before-->
+          <div></div>
+          <span class="blind">페이 바로가기</span>
+        </button>
+        <button id="header-notice">
+          <!--:hover::before-->
+          <div></div>
+          <span class="blind">알림</span>
         </button>
       </div>
       <div id="search"></div>
