--- a/index.html
+++ b/index.html
@@ -53,62 +53,62 @@
         <ul>
           <li>
             <a href="">
-              <div></div>
-              <span>메일</span>
+              <span class="nav-img"></span>
+              <span class="nav-text">메일</span>
             </a>
           </li>
           <li>
             <a href="">
-              <div></div>
-              <span>카페</span>
+              <span class="nav-img"></span>
+              <span class="nav-text">카페</span>
             </a>
           </li>
           <li>
             <a href="">
-              <div></div>
-              <span>블로그</span>
+              <span class="nav-img"></span>
+              <span class="nav-text">블로그</span>
             </a>
           </li>
           <li>
             <a href="">
-              <div></div>
-              <span>쇼핑</span>
+              <span class="nav-img"></span>
+              <span class="nav-text">쇼핑</span>
             </a>
           </li>
           <li>
             <a href="">
-              <div></div>
-              <span>뉴스</span>
+              <span class="nav-img"></span>
+              <span class="nav-text">뉴스</span>
             </a>
           </li>
           <li>
             <a href="">
-              <div></div>
-              <span>증권</span>
+              <span class="nav-img"></span>
+              <span class="nav-text">증권</span>
             </a>
           </li>
           <li>
             <a href="">
-              <div></div>
-              <span>부동산</span>
+              <span class="nav-img"></span>
+              <span class="nav-text">부동산</span>
             </a>
           </li>
           <li>
             <a href="">
-              <div></div>
-              <span>지도</span>
+              <span class="nav-img"></span>
+              <span class="nav-text">지도</span>
             </a>
           </li>
           <li>
             <a href="">
-              <div></div>
-              <span>웹툰</span>
+              <span class="nav-img"></span>
+              <span class="nav-text">웹툰</span>
             </a>
           </li>
           <li>
             <a href="">
-              <div></div>
-              <span class="blind">더보기</span>
+              <span class="nav-img"></span>
+              <span class="nav-text blind">더보기</span>
             </a>
           </li>
         </ul>
