--- a/index.html
+++ b/index.html
@@ -52,55 +52,55 @@
       <div id="nav">
         <ul>
           <li>
-            <a href="">
+            <a href="https://nid.naver.com/nidlogin.login?url=https%3A%2F%2Fmail.naver.com%2F">
               <span class="nav-img"></span>
               <span class="nav-text">메일</span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://section.cafe.naver.com/ca-fe/">
               <span class="nav-img"></span>
               <span class="nav-text">카페</span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://section.blog.naver.com/BlogHome.naver?directoryNo=0&currentPage=1&groupId=0">
               <span class="nav-img"></span>
               <span class="nav-text">블로그</span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://shopping.naver.com/home">
               <span class="nav-img"></span>
               <span class="nav-text">쇼핑</span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://news.naver.com/">
               <span class="nav-img"></span>
               <span class="nav-text">뉴스</span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://finance.naver.com/">
               <span class="nav-img"></span>
               <span class="nav-text">증권</span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://land.naver.com/">
               <span class="nav-img"></span>
               <span class="nav-text">부동산</span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://map.naver.com/v5/?c=15,0,0,0,dh">
               <span class="nav-img"></span>
               <span class="nav-text">지도</span>
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://comic.naver.com/index">
               <span class="nav-img"></span>
               <span class="nav-text">웹툰</span>
             </a>
