--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="wrap">
     <div id="wrap-center">
-      <div id="header">
+      <header>
         <button id="header-hamburger">
           <!--:hover::before-->
           <div></div>
@@ -28,7 +28,7 @@
           <span class="blind">알림</span>
           <!--::after-->
         </button>
-      </div>
+      </header>
       <div id="search">
         <form action="">
           <a id="search-svg" href="file:///C:/MIJIN/naver_study/index.html">
@@ -49,7 +49,7 @@
           </div>
         </form>
       </div>
-      <div id="nav">
+      <nav>
         <ul>
           <li>
             <a href="https://nid.naver.com/nidlogin.login?url=https%3A%2F%2Fmail.naver.com%2F">
@@ -112,8 +112,8 @@
             </a>
           </li>
         </ul>
-      </div>
-      <div id="main"></div>
+      </nav>
+      <main></main>
     </div>
   </div>
 </body>
