main 위쪽 틀잡기

--- a/index.html
+++ b/index.html
@@ -113,7 +113,19 @@
           </li>
         </ul>
       </nav>
-      <main></main>
+      <main>
+        <div id="main-left">
+          <aside id="main-left-ad"></aside>
+          <section id="main-news-stand"></section>
+          <section id="main-shopping"></section>
+        </div>
+        <div id="main-right">
+          <section id="main-login"></section>
+          <aside id="main-right-ad"></aside>
+          <section id="main-weather"></section>
+          <section id="main-stock"></section>
+        </div>
+      </main>
     </div>
   </div>
 </body>
