main 틀 & 날씨 증시 공통header

--- a/index.html
+++ b/index.html
@@ -122,8 +122,15 @@
         <div id="main-right">
           <section id="main-login"></section>
           <aside id="main-right-ad"></aside>
-          <section id="main-weather"></section>
-          <section id="main-stock"></section>
+          <section id="main-issue-banner"></section>
+          <section id="main-weather" class="weather-and-stock">
+            <header>날씨</header>
+            <div></div>
+          </section>
+          <section id="main-stock" class="weather-and-stock">
+            <header>증시</header>
+            <div></div>
+          </section>
         </div>
       </main>
     </div>
