login 완료, news stand 틀 잡기

--- a/index.html
+++ b/index.html
@@ -116,11 +116,80 @@
       <main>
         <div id="main-left">
           <aside id="main-left-ad"></aside>
-          <section id="main-news-stand"></section>
-          <section id="main-shopping"></section>
+          <section id="main-news-stand">
+            <div id="main-news-stand-top">
+              <header>
+                <a href="#" class="bold">뉴스스탠드</a>
+                <a href="#">언론사편집</a>
+                <a href="#">엔터</a>
+                <a href="#">스포츠</a>
+                <a href="#">경제</a>
+              </header>
+              <div id="main-news-stand-sub-view">
+                <div>
+                  <a href="#">전체언론사</a>
+                  <a href="#">연합뉴스</a>
+                  <a href="#">빽미 지금 빅파이 먹고싶어 아이스크림도 먹고싶어 커피에 얼음이 없어 얼음도 추가하고 싶어</a>
+                </div>
+                <div>
+                  <a href="#">뉴스스탠드</a>
+                  <a href="#">뉴스홈</a>
+                </div>
+              </div>
+              <div id="main-news-stand-grid">
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+                <div>언론사</div>
+              </div>
+            </div>
+            <footer>
+              <button class="blind">이전</button>
+              <div>언론사 더보기 1/4</div>
+              <button class="blind">다음</button>
+              <button class="blind">목록보기</button>
+              <button class="blind">격자보기</button>
+            </footer>
+          </section>
+          <section id="main-shopping">
+            <header></header>
+            <div></div>
+            <div></div>
+            <footer></footer>
+          </section>
         </div>
         <div id="main-right">
-          <section id="main-login"></section>
+          <section id="main-login">
+            <div>네이버를 더 안전하고 편리하게 이용하세요</div>
+            <a href="https://nid.naver.com/nidlogin.login?mode=form&url=https://www.naver.com/" id="main-login-button">
+              <i></i>로그인
+            </a>
+            <div>
+              <a href="#">아이디 찾기</a>
+              <a href="#">비밀번호 찾기</a>
+              <a href="#">회원가입</a>
+            </div>
+          </section>
           <aside id="main-right-ad"></aside>
           <section id="main-issue-banner"></section>
           <section id="main-weather" class="weather-and-stock">
